Terminar máscara CPF

--- a/Ibvc.sln/Ibvc.Api/appsettings.Development.json
+++ b/Ibvc.sln/Ibvc.Api/appsettings.Development.json
@@ -3,7 +3,7 @@
         "DefaultConnection": "Data Source=ibvc.db"
     },
     "JwtSettings": {
-        "SecretKey": "Ltfof@192",
+        "SecretKey": "gAsxGWvy4+bQJHIM3AYCDDThHpllpsczY5RWwKPVox8=",
         "Issuer": "IbvcApi",
         "Audience": "IbvcApp",
         "ExpirationMinutes": 60
