Tentando resolver navigation errado

--- a/Ibvc.sln/Ibvc.UI/Ibvc.UI.csproj
+++ b/Ibvc.sln/Ibvc.UI/Ibvc.UI.csproj
@@ -4,6 +4,8 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
+        <OutputPath>bin\$(Configuration)\</OutputPath>
+        <StaticWebAssetBasePath>Ibvc</StaticWebAssetBasePath>
     </PropertyGroup>
 
     <ItemGroup>
